--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "i18next": "^25.1.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
