--- a/.hintrc
+++ b/.hintrc
@@ -21,6 +21,7 @@
         "button-name": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "button-type": "off"
   }
 }
