--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
+    "react-qr-code": "^2.0.15",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
