--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-qr-code": "^2.0.15",
+    "socket.io-client": "^4.8.1",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
