--- a/.hintrc
+++ b/.hintrc
@@ -6,7 +6,8 @@
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
+        "select-name": "off",
+        "label": "off"
       }
     ],
     "axe/structure": [
@@ -23,6 +24,7 @@
       }
     ],
     "no-inline-styles": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
