--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-qr-code": "^2.0.15",
