--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^8.0.2",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
