--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-i18next": "^15.5.1",
     "react-qr-code": "^2.0.15",
     "socket.io-client": "^4.8.1",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
