--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@mantine/core": "^8.0.2",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "country-telephone-data": "^0.6.3",
     "framer-motion": "^12.12.1",
     "i18next": "^25.1.2",
     "js-cookie": "^3.0.5",
@@ -22,6 +24,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
+    "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
     "socket.io-client": "^4.8.1",
     "usehooks-ts": "^3.1.1",
