--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
+    "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
     "socket.io-client": "^4.8.1",
